# hepex-analysisops-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: test-and-publish.yml
docs/walkthrough/: v0.1.1.md
inputs/: HyyAnalysis.py
outputs/drafts_v1/: l123_rubric.md  reference_analysis.md
outputs/drafts_v2/: reference_analysis.md
outputs/drafts_v3/: l1_prompt.md
outputs/drafts_v4/: l1_prompt.md  l2_prompt.md  l3_prompt.md  public_rubric.yaml  reference_analysis.md
prompts/: prompt_extract_reference.txt  prompt_generate_l1.txt  prompt_generate_l123_rubric.txt  prompt_generate_l2.txt  prompt_generate_l3.txt  prompt_generate_public_rubric.txt
scripts/: dev_gen_rubric.ipynb  download_root_files.py  reproduce_locally.py  reproduce_mock_scored.py  sync_hyy_v5_l1_from_dev.py
specs/: README.md
specs/hbb/: white_prompt.md
specs/hmumu/: white_prompt.md
specs/zpeak_fit/: eval_ref.yaml  judge_prompt.md  rubric.yaml  task_spec.yaml  white_prompt.md
src/: agent.py  green_agent_skill.yaml  launcher.py  messenger.py  server.py  utils.py
src/engine/: checks.py  contract_validator.py  evaluator.py  input_access.py  l1_scorer.py  llm_judge.py  llm_judge_gemini.py  package_loader.py  prompt_render.py  rule_engine.py  secret_store.py  submission_bundle.py
tests/: test_contract_validator.py  test_e2e_integration.py  test_engine_generic.py  test_engine_zpeak_fit.py  test_green_agent_smoke.py  test_hyy_v5_l1_flow.py  test_llm_judge_defaults.py  test_response_parsing.py  test_server_integration.py
(+43 files in other folders)
